--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My Divshot Application</title>
-
-  <style>
-    body{
-      font:500 14px/21px 'Helvetica Neue', Helvetica, Arials;
-      padding:40px;
-    }
-  </style>
-
+  <title>Shlog.js</title>
+  <script src="libs/localforage.min.js"></script>
 </head>
 <body>
-  <h1>Welcome to Divshot Hosting!</h1>
-  <p>Make something static!</p>
-  <h2>Should there be something here?</h2>
-  <p><a href="mailto:support@divshot.com">Get Help via Email</a> or <a href="http://docs.divshot.com/guides/common-deploy-issues">Common Deploy Issues Documentation</a></p>
+<script>
+localforage.setItem('my array', "proba", function(err, value) {
+    // This will output `1`.
+    console.log(value);
+});
+</script>
+
+  <h1>Shlog.js</h1>
 </body>
 </html>
