--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ localforage.setItem('my array', "proba", function(err, value) {
 });
 </script>
 
-  <h1>Shlog.js</h1>
+  <h1><img src="assets/shlog.png" alt="Shlog.js"></h1>
 </body>
 </html>
