--- a/index.html
+++ b/index.html
@@ -41,16 +41,14 @@
     <h1><img src="assets/shlog.png" alt="Shlog.js"></h1>
 
     <script>
-    getFile('/config.json',
-        function(data) {
-            // console.log(data.posts[0]);
-            console.log(data);
-        },
+    var shlog = getFile('/config.json',
+        function(data) {},
         function(xhr) {
             console.error(xhr);
         },
         "json"
     );
+    console.log(shlog.version);
     </script>
 </body>
 
