Added Fetch polyfill

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Shlog.js</title>
     <script src="libs/localforage.min.js"></script>
+    <script src="libs/fetch.js"></script>
     <script>
     function getFile(path, success, error, type) {
         var xhr = new XMLHttpRequest();
