--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
     <script src="libs/fetch.js"></script>
     <script>
-    fetch('https://dl.dropboxusercontent.com/u/844617/2014-10-14-ieisaswearword.md')
+    fetch('_posts/2014-10-14-ieisaswearword.md')
         .then(function(response) {
             return response.text();
         }).then(function(r) {
