--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
     <script src="libs/fetch.js"></script>
     <script>
+    fetch('/config.json')
+        .then(function(response) {
+            return response.json()
+        }).then(function(json) {
+            console.log('parsed json', json)
+        }).catch(function(ex) {
+            console.log('parsing failed', ex)
+        });
 
-    fetch("config.json").then(function(res){
-      console.log(res.json);
-    })
     fetch('_posts/2014-10-14-ieisaswearword.md')
         .then(function(response) {
             return response.text();
