--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         .then(function(response) {
             return response.json()
         }).then(function(json) {
-            console.log('parsed json', json)
+            Shlog.config = json;
         }).catch(function(ex) {
-            console.log('parsing failed', ex)
+            console.error('Fail: ', ex)
         });
 
     fetch('_posts/2014-10-14-ieisaswearword.md')
