--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
     <script>
     fetch('/config.json')
         .then(function(response) {
-            return response.json()
+            return response.json();
         }).then(function(json) {
-            console.log('parsed json', json)
+            console.log('parsed json', json);
         }).catch(function(ex) {
-            console.log('parsing failed', ex)
+            console.log('parsing failed', ex);
         });
+
+     fetch('/posts.json')
+         .then(function(response) {
+             return response.json();
+         }).then(function(json) {
+             console.log('parsed json', json);
+         }).catch(function(ex){
+             console.log('parser error', ex);
+         });
 
     fetch('_posts/2014-10-14-ieisaswearword.md')
         .then(function(response) {
