--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html manifest="shlog.appcache">
+<!-- <html manifest="shlog.appcache"> -->
+<html>
 
 <head>
     <meta charset="utf-8">
