--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         .then(function(response) {
             return response.json();
         }).then(function(posts) {
-            posts.forEach(function(record) {
-                console.log(record);
-            });
+                console.log(posts);
         }).then(function(json) {
             console.log('parsed json', json);
         }).catch(function(ex) {
