--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .then(function(response) {
             return response.json();
         }).then(function(posts) {
-                console.log(posts);
+                Shlog.posts = posts;
         }).then(function(json) {
             console.log('parsed json', json);
         }).catch(function(ex) {
