--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
     <script src="libs/fetch.js"></script>
     <script src="libs/helpers.js"></script>
-    <script src="libs/helpers.js"></script>
+    <script src="libs/router.js"></script>
     <script>
     var Shlog = {};
     fetch('/config.json')
