History API router added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
     <script src="libs/fetch.js"></script>
     <script src="libs/helpers.js"></script>
+    <script src="libs/router.js"></script>
     <script>
     var Shlog = {};
     fetch('/config.json')
@@ -46,6 +47,26 @@
     //     }).then(function(r) {
     //         document.getElementsByTagName('post')[0].innerHTML = marked(r);
     //     });
+
+    Router.config({
+        mode: 'history'
+    });
+
+    // returning the user to the initial state
+    Router.navigate();
+
+    // adding routes
+    Router
+        .add(/about/, function() {
+            console.log('about');
+        })
+        .add(/products\/(.*)\/edit\/(.*)/, function() {
+            console.log('products', arguments);
+        })
+        .add(function() {
+            console.log('default');
+        })
+        .check('/products/12/edit/22').listen();
     </script>
 </head>
 
