--- a/index.html
+++ b/index.html
@@ -52,21 +52,14 @@
         mode: 'history'
     });
 
-    // returning the user to the initial state
-    Router.navigate();
-
     // adding routes
     Router
         .add(/about/, function() {
-            console.log('about');
-        })
-        .add(/products\/(.*)\/edit\/(.*)/, function() {
-            console.log('products', arguments);
+            alert("jes");
         })
         .add(function() {
             console.log('default');
-        })
-        .check('/products/12/edit/22').listen();
+        }).listen();
     </script>
 </head>
 
