--- a/index.html
+++ b/index.html
@@ -26,7 +26,24 @@
         .then(function(response) {
             return response.json();
         }).then(function(posts) {
-            Shlog.posts = posts; // Shlog.posts
+            Shlog.posts = posts;
+            Router
+                .add(/about/, function() {
+                    alert("jes");
+                }).listen();
+            for (var key in Shlog.posts) {
+                Router.add("/" + key + "/", function() {
+                    alert("ajaaaaaaoo");
+                }).listen();
+                console.log(key, Shlog.posts[key].author);
+                // fetch(Shlog.posts[key].content)
+                //     .then(function(response) {
+                //         return response.text();
+                //     })
+                //     .then(function(text) {
+                //         // document.getElementsByTagName('post')[0].innerHTML = marked(text);
+                //     })
+            } // Shlog.posts
         }).catch(function(ex) {
             console.log('parser error', ex);
         });
@@ -36,23 +53,6 @@
     });
 
     // Routes
-    Router
-        .add(/about/, function() {
-            alert("jes");
-        }).listen();
-    for (var key in Shlog.posts) {
-        Router.add("/" + key + "/", function() {
-            alert("ajaaaaaaoo");
-        }).listen();
-        console.log(key, Shlog.posts[key].author);
-        // fetch(Shlog.posts[key].content)
-        //     .then(function(response) {
-        //         return response.text();
-        //     })
-        //     .then(function(text) {
-        //         // document.getElementsByTagName('post')[0].innerHTML = marked(text);
-        //     })
-    }
     </script>
 </head>
 
