--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         });
 
     Router.config({
-        mode: 'history'
+        mode: 'history',
+        root: '/'
     });
 
     // Routes
