Added onPopState event listener

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         root: '/'
     });
 
+    window.onpopstate = function(event) {
+        alert("location: " + document.location + ", state: " + JSON.stringify(event.state));
+    };
     // Routes
     </script>
 </head>
