Removed root from Router

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         });
 
     Router.config({
-        mode: 'history',
-        root: '/'
+        mode: 'history'
     });
 
     window.onpopstate = function(event) {
