--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@
         mode: 'history'
     });
 
+    (function(history) {
+        var pushState = history.pushState;
+        history.pushState = function(state) {
+            if (typeof history.onpushstate == "function") {
+                history.onpushstate({
+                    state: state
+                });
+            }
+            // whatever else you want to do
+            // maybe call onhashchange e.handler
+            return pushState.apply(history, arguments);
+        }
+    })(window.history);
+
+
     window.onpopstate = function(event) {
         alert("location: " + document.location + ", state: " + JSON.stringify(event.state));
     };
