--- a/index.html
+++ b/index.html
@@ -21,28 +21,27 @@
         }).catch(function(ex) {
             console.error('Fail: ', ex)
         });
-
+    Router.listen();
     fetch('/posts.json')
         .then(function(response) {
             return response.json();
         }).then(function(posts) {
             Shlog.posts = posts; // Shlog.posts
-            Router
-                .add(/about/, function() {
-                    alert("jes");
-                })
+            Router.add(/about/, function() {
+                alert("jes");
+            });
             for (var key in Shlog.posts) {
                 Router.add("/" + key + "/", function(Shlog) {
-                    console.warn("TEST");
-                    fetch(Shlog.posts[Router.getFragment()].content)
-                        .then(function(response) {
-                            return response.text();
-                        })
-                        .then(function(text) {
-                            document.getElementsByTagName('post')[0].innerHTML = marked(text);
-                        })
-                }).listen();
-                // console.log(key, Shlog.posts[key].author);
+                        console.warn("TEST");
+                        fetch(Shlog.posts[Router.getFragment()].content)
+                            .then(function(response) {
+                                return response.text();
+                            })
+                            .then(function(text) {
+                                document.getElementsByTagName('post')[0].innerHTML = marked(text);
+                            })
+                    })
+                    // console.log(key, Shlog.posts[key].author);
             }
         }).catch(function(ex) {
             console.log('parser error', ex);
