Return to initial state of router

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             console.error('Fail: ', ex)
         });
     Router.listen();
+    Router.navigate();
     fetch('/posts.json')
         .then(function(response) {
             return response.json();
