--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     // });
     </script>
 
-    <h1><img src="assets/shlog.png" alt="Shlog.js"></h1>
+    <h1><a href="#" onclick="Router.navigate();"><img src="assets/shlog.png" alt="Shlog.js"></a></h1>
     <article>
         <h2 id="article-title"></h2>
         <time></time>
