--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         });
     Router.add(/^$/, function() {
         console.log(Router.getFragment());
-        document.getElementsByTagName('article')[0].innerHTML = "";
+        document.getElementsByTagName('post')[0].innerHTML = "";
     });
     Router.config({
         mode: 'history'
