Added some logging

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                     document.getElementById("article-title").innerHTML = Shlog.posts[Router.getFragment()].title;
                     document.querySelectorAll('article > time')[0].innerHTML = Shlog.posts[Router.getFragment()].datetime;
                     localforage.getItem(key).then(function(value) {
+                        console.log("Retreiving: "+ key);
                         if (value != null) {
+                            console.log(key + " retrieved from localforage");
                             document.getElementsByTagName('post')[0].innerHTML = marked(value);
                         } else {
                             fetch(Shlog.posts[Router.getFragment()].content)
@@ -43,7 +45,7 @@
                                 .then(function(text) {
                                     document.getElementsByTagName('post')[0].innerHTML = marked(text);
                                     localforage.setItem(key, text, function(err, value) {
-                                        console.log(key + "saved with localforage");
+                                        console.log(key + " saved with localforage");
                                     });
                                 })
                         };
