--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             Shlog.posts = posts; // Shlog.posts
             for (var key in Shlog.posts) {
                 var a = document.createElement('a');
-                var linkText = document.createTextNode(key.title);
+                var linkText = document.createTextNode(Shlog.posts[key].title);
                 a.appendChild(linkText);
-                a.title = key.title;
+                a.title = Shlog.posts[key].title;
                 a.setAttribute('onclick','Router.navigate(key);');
                 a.href = "#";
                 document.getElementById("link-farm").appendChild(a);
